--- a/css/styles.css
+++ b/css/styles.css
@@ -150,3 +150,105 @@ we want to edit scroll-bar now */
 }
 
 /* Re used style */
+
+.container{
+    padding-inline: 15px;
+}
+
+
+
+/* Styling the header section */
+
+.overlay,
+.header .btn{
+    display: none;
+}
+
+.header{
+    --color: var(--white);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-block: 14px;
+    z-index: 4;
+    transition: var(--transition-1);
+}
+
+.header .active{ 
+       /* Note we created an instant variable --color here */
+    --color: var(--st-patricks-blue);
+    position: fixed;
+    background-color: var(--white);
+    box-shadow: 0 2px 30px hsla(0, 0%, 0%, 0.1);
+}
+
+.header .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.logo{
+    color: var(--color);
+    font-family: var(--ff-source-sans-pro);
+    font-size: var(--fs-3);
+}
+
+.nav-open-btn{
+    color: var(--color);
+    font-size: 32px;
+    padding: 4px;
+}
+
+.navbar{
+    background-color: var(--white);
+    position: fixed;
+    top: 0;
+    left: -280px;
+    width: 100%;
+    max-width: 280px;
+    min-height: 100%;
+    padding: 20px;
+    visibility: hidden;
+    z-index: 2;
+    transition: 0.25s var(--cubic-inn);
+}
+
+.navbar.active{
+    transform: translateX(280px);
+    visibility: visible;
+    transition: 0.5s var(--cubic-out);
+}
+
+.navbar-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-block: 10px 30px;
+}
+
+.navbar-top .logo{
+    color: var(--st-patricks-blue);
+    font-size: 4.2rem;
+    font-weight: var(--fw-700);
+}
+
+.nav-close-btn{
+    color: var(--space-cadet-1);
+    font-size: 2.8rem;
+    padding: 4px;
+
+}
+
+.navbar-item:not(:last-child){
+    border-bottom: 1px solid var(--platinum);
+}
+
+.navbar-link{
+    color: var(--space-cadet-1);
+    font-size: var(--fs-8);
+    font-weight: var(--fw-600);
+    padding-block: 12px;
+}
