--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,8 @@
     /* the typography */
 
     --ff-source-sans-pro: 'Source Sans Pro', sans-serif;
-    --ff-poppins: 'poppins', sans-serif --fs-1: 4.2rem;
+    --ff-poppins: 'poppins', sans-serif;
+    --fs-1: 4.2rem;
     --fs-2: 3.8rem;
     --fs-3: 3.2rem;
     --fs-4: 2.5rem;
@@ -126,7 +127,6 @@ body{
     background-color: var(--white);
     color: var(--purple-navy);
     font-size: 1.6rem;
-    height: 300vh;
 }
 
 /* 
@@ -150,6 +150,38 @@ we want to edit scroll-bar now */
 }
 
 /* Re used style starts */
+.h2{
+    font-family: var(--ff-source-sans-pro);
+}
+
+.btn{
+    background-image: var(--gradient-2);
+    background-size: 200%;
+    color: var(--white);
+    padding: 12px 35px;
+    font-size: var(--fs-8);
+    font-weight: var(--fw-500);
+    border-radius: 0 25px;
+    transition: var(--transition-2);
+}
+
+.btn:is(:hover, :focus){
+    background-position: right;
+}
+
+.w-100{
+    width: 100%;
+}
+
+.banner-animation{
+    animation: waveAnim 2s linear infinite alternate;
+}
+
+/* Making a keyframe */
+@keyframes waveAnim {
+    0% {transform: translate(0, 0) rotate(0);}
+    100% {transform: translate(2px, 2px) rotate(1deg);}
+}
 
 h2, h3{
     font-family: var(--ff-source-sans-pro);
@@ -308,15 +340,51 @@ h2, h3{
 
 
 
+/* Styling the hero section starts */
+
+.hero{
+    background-image: url("../img/10.jpeg"),
+                     url("../img/10sneakersFoot.jpg"),
+                     var(--gradient-1);
+    background-repeat: no-repeat, no-repeat, no-repeat;
+    background-position: -280px bottom, center, center;
+    background-size: auto, cover, auto;     
+    padding-block-start: 120px;
+    padding-block-end: var(--section-padding);            
+}
+
+.hero-content{
+    margin-block-end: 50px;
+}
+
+.hero-subtitle{
+    color: var(--chrome-yellow);
+    font-family: var(--ff-source-sans-pro);
+    font-size: var(--fs-7);
+    margin-block-end: 15px;
+}
+
+.hero-title{
+    color: var(--white);
+    font-size: var(--fs-1);
+    margin-block-end: 20px;
+}
+
+.hero-text{
+    color: var(--white);
+    font-size: var(--fs-8);
+    margin-block-end: 30px;
+}
 
 
 
 
 
 
+/* Styling the hero section ends */
 
 
-/* The call to Prayer's styling */
+/* The Life's we've touched styling */
 
 .about-banner{
     margin-block-end: 30px;
