--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 /* Styling all colors I would be using in this website */
 
 :root {
@@ -39,7 +38,7 @@
     --fw-600: 600;
     --fw-700: 700;
 
-     
+
 
     /* Border Radius */
 
@@ -48,7 +47,7 @@
 
     /* The spacing's for the Project */
 
-    --section-padding: 60px; 
+    --section-padding: 60px;
 
     /* Our prject's Transition */
 
@@ -70,60 +69,60 @@
 *::before {
     padding: 0;
     margin: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
-li{
+li {
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
 a,
-img, 
+img,
 span,
 input,
 button,
-ion-icon{
+ion-icon {
     display: block;
 }
 
 button,
-input{
+input {
     background: none;
     border: none;
     font: inherit;
 }
 
-button{
+button {
     cursor: pointer;
 }
 
-input{
+input {
     width: 100%;
 }
 
-ion-icon{
+ion-icon {
     pointer-events: none;
 }
 
-img{
+img {
     height: auto;
 }
 
-address{
+address {
     font-style: normal;
 }
 
-html{
+html {
     font-family: var(--ff-poppins);
     font-size: 10px;
     scroll-behavior: smooth;
 }
 
-body{
+body {
     background-color: var(--white);
     color: var(--purple-navy);
     font-size: 1.6rem;
@@ -132,20 +131,20 @@ body{
 /* 
 we want to edit scroll-bar now */
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 10px;
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
     background-color: hsl(0, 0%, 95%);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     background-color: hsl(0, 0%, 80%);
 }
 
 
-::-webkit-scrollbar-thumb:hover{
+::-webkit-scrollbar-thumb:hover {
     background-color: hsl(0, 0%, 70%);
 }
 
@@ -155,11 +154,11 @@ we want to edit scroll-bar now */
 
 
 /* Re used style starts */
-.h2{
+.h2 {
     font-family: var(--ff-source-sans-pro);
 }
 
-.btn{
+.btn {
     background-image: var(--gradient-2);
     background-size: 200%;
     color: var(--white);
@@ -170,38 +169,44 @@ we want to edit scroll-bar now */
     transition: var(--transition-2);
 }
 
-.btn:is(:hover, :focus){
+.btn:is(:hover, :focus) {
     background-position: right;
 }
 
-.w-100{
+.w-100 {
     width: 100%;
 }
 
-.banner-animation{
+.banner-animation {
     animation: waveAnim 2s linear infinite alternate;
 }
 
 /* Making a keyframe */
 @keyframes waveAnim {
-    0% {transform: translate(0, 0) rotate(0);}
-    100% {transform: translate(2px, 2px) rotate(1deg);}
+    0% {
+        transform: translate(0, 0) rotate(0);
+    }
+
+    100% {
+        transform: translate(2px, 2px) rotate(1deg);
+    }
 }
 
-h2, h3{
+h2,
+h3 {
     font-family: var(--ff-source-sans-pro);
 }
 
 
-.container{
+.container {
     padding-inline: 15px;
 }
 
-.section{
+.section {
     padding-block: var(--section-padding);
 }
 
-.section-title{
+.section-title {
     color: var(--st-patricks-blue);
     font-size: var(--fs-3);
     margin-block-end: 60px;
@@ -209,11 +214,11 @@ h2, h3{
     margin-inline: auto;
 }
 
-.underline{
+.underline {
     position: relative;
 }
 
-.underline::before{
+.underline::before {
     content: "";
     position: absolute;
     bottom: -20px;
@@ -226,13 +231,13 @@ h2, h3{
 }
 
 
-.call-prayer-card .title{
+.call-prayer-card .title {
     color: var(--st-patricks-blue);
     font-size: var(--fs-4);
     font-weight: var(--fw-700);
 }
 
-.call-prayer-card .text{
+.call-prayer-card .text {
     font-size: var(--fs-8);
 }
 
@@ -244,11 +249,11 @@ h2, h3{
 
 /* Styling the header section */
 
-.header .btn{
+.header .btn {
     display: none;
 }
 
-.header{
+.header {
     --color: var(--white);
     position: absolute;
     top: 0;
@@ -259,34 +264,34 @@ h2, h3{
     transition: var(--transition-1);
 }
 
-.header.active{ 
-       /* Note we created an instant variable --color here */
+.header.active {
+    /* Note we created an instant variable --color here */
     --color: var(--st-patricks-blue);
     position: fixed;
     background-color: var(--white);
     box-shadow: 0 2px 30px hsla(0, 0%, 0%, 0.1);
 }
 
-.header .container{
+.header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 30px;
 }
 
-.logo{
+.logo {
     color: var(--color);
     font-family: var(--ff-source-sans-pro);
     font-size: var(--fs-3);
 }
 
-.nav-open-btn{
+.nav-open-btn {
     color: var(--color);
     font-size: 32px;
     padding: 4px;
 }
 
-.navbar{
+.navbar {
     background-color: var(--white);
     position: fixed;
     top: 0;
@@ -300,45 +305,45 @@ h2, h3{
     transition: 0.25s var(--cubic-inn);
 }
 
-.navbar.active{
+.navbar.active {
     transform: translateX(280px);
     visibility: visible;
     transition: 0.5s var(--cubic-out);
 }
 
-.navbar-top{
+.navbar-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-block: 10px 30px;
 }
 
-.navbar-top .logo{
+.navbar-top .logo {
     color: var(--st-patricks-blue);
     font-size: 3.6rem;
     font-weight: var(--fw-700);
 }
 
-.nav-close-btn{
+.nav-close-btn {
     color: var(--space-cadet-1);
     font-size: 2.8rem;
     padding: 4px;
 
 }
 
-.navbar-item:not(:last-child){
+.navbar-item:not(:last-child) {
     border-bottom: 1px solid var(--platinum);
     width: 200px;
 }
 
-.navbar-link{
+.navbar-link {
     color: var(--space-cadet-1);
     font-size: var(--fs-8);
     font-weight: var(--fw-600);
     padding-block: 12px;
 }
 
-.overlay{
+.overlay {
     position: fixed;
     inset: 0;
     background-color: var(--black_70);
@@ -348,7 +353,7 @@ h2, h3{
     transition: var(--transition-2);
 }
 
-.overlay.active{
+.overlay.active {
     opacity: 1;
     pointer-events: all;
 }
@@ -357,35 +362,35 @@ h2, h3{
 
 /* Styling the hero section starts */
 
-.hero{
+.hero {
     background-image: url("../img/10.jpeg"),
-                     url("../img/10sneakersFoot.jpg"),
-                     var(--gradient-1);
+        url("../img/10sneakersFoot.jpg"),
+        var(--gradient-1);
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-position: -280px bottom, center, center;
-    background-size: auto, cover, auto;     
+    background-size: auto, cover, auto;
     padding-block-start: 120px;
-    padding-block-end: var(--section-padding);            
+    padding-block-end: var(--section-padding);
 }
 
-.hero-content{
+.hero-content {
     margin-block-end: 50px;
 }
 
-.hero-subtitle{
+.hero-subtitle {
     color: var(--chrome-yellow);
     font-family: var(--ff-source-sans-pro);
     font-size: var(--fs-7);
     margin-block-end: 15px;
 }
 
-.hero-title{
+.hero-title {
     color: var(--white);
     font-size: var(--fs-1);
     margin-block-end: 20px;
 }
 
-.hero-text{
+.hero-text {
     color: var(--white);
     font-size: var(--fs-8);
     margin-block-end: 30px;
@@ -401,44 +406,44 @@ h2, h3{
 
 /* The Life's we've touched styling */
 
-.about-banner{
+.about-banner {
     margin-block-end: 30px;
 }
 
-.about .section-title{
+.about .section-title {
     margin-inline: 0;
 }
 
-.about .underline::before{
+.about .underline::before {
     left: 0;
     transform: translateX(0);
 }
 
-.about-text{
+.about-text {
     font-size: var(--fs-8);
     margin-block-end: 20px;
-    
+
 }
 
-.stats-list{
+.stats-list {
     display: grid;
     gap: 30px;
 }
 
-.starts-card{
+.starts-card {
     text-align: center;
     padding: 15px;
     box-shadow: var(--shadow);
     border-radius: var(--radius-12);
 }
 
-.stats-title{
+.stats-title {
     color: var(--st-patricks-blue);
     font-size: var(--fs-2);
     font-weight: var(--fw-700);
 }
 
-.stats-text{
+.stats-text {
     font-size: var(--fs-8);
 }
 
@@ -450,19 +455,19 @@ h2, h3{
 
 /* Styling the call-prayer section ends */
 
-.call-prayer-list{
+.call-prayer-list {
     display: grid;
     gap: 30px;
     cursor: pointer;
 }
 
-.call-prayer-card{
+.call-prayer-card {
     padding: 30px;
     box-shadow: var(--shadow);
     border-radius: var(--radius-12);
 }
 
-.call-prayer-card .call-prayer-card-icon{
+.call-prayer-card .call-prayer-card-icon {
     background-image: url("../img/9swaggystyles.jpg");
     background-repeat: no-repeat;
     background-size: contain;
@@ -475,33 +480,33 @@ h2, h3{
     transition: var(--transition-1);
 }
 
-.call-prayer-card:hover .call-prayer-card-icon{
+.call-prayer-card:hover .call-prayer-card-icon {
     background: var(--winter-sky);
-   
+
 }
 
-.call-prayer-card .call-prayer-card-icon ion-icon{
+.call-prayer-card .call-prayer-card-icon ion-icon {
     font-size: 5rem;
     color: var(--winter-sky);
     --ionicon-stroke-width: 20px;
     transition: var(--transition-1);
 }
 
-.call-prayer-card:hover .call-prayer-card-icon ion-icon{
+.call-prayer-card:hover .call-prayer-card-icon ion-icon {
     color: var(--white);
 }
 
-.call-prayer-card .title{
+.call-prayer-card .title {
     text-align: center;
     margin-block-end: 15px;
 }
 
-.call-prayer-card .text{
+.call-prayer-card .text {
     text-align: center;
     margin-block-end: 20px;
 }
 
-.call-prayer-card .call-prayer-card-btn{
+.call-prayer-card .call-prayer-card-btn {
     /* margin-inline: auto; change back when ion-icon works */
     text-align: center;
     padding: 15px;
@@ -511,7 +516,49 @@ h2, h3{
     transition: var(--transition-1);
 }
 
-.call-prayer-card .call-prayer-card-btn:is(:hover, :focus){
+.call-prayer-card .call-prayer-card-btn:is(:hover, :focus) {
     color: var(--white);
     background-color: var(--winter-sky);
 }
+
+
+/* Styling of the Classes Crousel starts */
+
+#class-start .classes {
+    background: url("../img/10.jpeg");
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 100vh;
+    width: 100%;
+}
+
+#class-start .classes-list {
+    padding-top: 6rem;
+}
+
+#class-start .classes-content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    margin: 3rem 2rem;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+
+#class-start .classes-title {
+    padding: 2rem 0;
+}
+
+#class-start img{
+    height: 200px;
+    width: 275px;
+    
+}
+
+#class-start span{
+    color: var(--black_70);
+}
+
+
+
+/* Styling of the Classes Crousel ends */
