--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,7 @@ h3 {
     background-position: right;
     height: 100vh;
     width: 100%;
+    background-size: 65%;
 }
 
 #class-start .classes-list {
@@ -557,8 +558,39 @@ h3 {
 
 #class-start span{
     color: var(--black_70);
+    font-family: var(--ff-poppins);
+    display: block;
 }
 
+#class-start .container{
+    margin: 0 50vw;
+}
+
+/* Styling the owl navigation */
+
+#class-start section .container .owl-nav{
+    position: absolute;
+    top: 0%;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.owl-nav .owl-prev .owl-nav-prev,
+.owl-nav .owl-next .owl-nav-next{
+    color: var(--royal-blue-dark);
+    background: transparent;
+    font-size: 2rem;
+}
+/* Removing the hover effect from owl-nav */
+
+.owl-theme .owl-nav[class="owl-"]:hover{
+    background: transparent;
+    color: var(--black_70);
+}
+
+.owl-theme .owl-nav[class="owl-"]{
+    outline: none;
+}
 
 
 /* Styling of the Classes Crousel ends */
