--- a/css/styles.css
+++ b/css/styles.css
@@ -480,7 +480,7 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
 }
 
 .call-prayer-card .call-prayer-card-icon {
-    background-image: url("../img/9swaggystyles.jpg");
+    background-image: url("../img/service-banner-pattern.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-color: hsla(335, 87%, 53%, 0.12);
@@ -537,7 +537,7 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
 /* Styling of the Classes Crousel starts */
 
 #class-start .classes {
-    background: url("../img/10.jpeg");
+    background: url("../img/Abract01.png");
     background-repeat: no-repeat;
     background-position: right;
     height: 100vh;
@@ -757,7 +757,7 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
 }
 
 .footer-top {
-    background-image: url("../img/3WhiteRockandRole.jpg"), var(--gradient-1);
+    background-image: url("../img/footer-bg.png"), var(--gradient-1);
     background-repeat: no-repeat;
     background-size: auto, 200%;
     background-position: center, center;
@@ -995,6 +995,14 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
         margin-inline-start: auto;
     }
 
+    /* THE CLASSES SECTION */
+
+    /* .classes .owl-carousel .classes-content{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: 100%;
+    } */
+
 
     /* The  about section styling */
     .stats-list {
@@ -1107,81 +1115,149 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
         max-width: 950px;
     }
 
-    .header{
+    .header {
         padding-block: 20px;
     }
 
     .overlay,
-     .nav-open-btn,
-     .navbar-top{
+    .nav-open-btn,
+    .navbar-top {
         display: none;
-     }
+    }
 
-     .navbar{
+    .navbar,
+    .navbar.active {
         all: unset;
         margin-inline-start: auto;
-     }
+    }
 
-     .header .btn{
+    .header .btn {
         margin-inline-start: 0;
-     }
+    }
 
-     .navbar-list{
+    .navbar-list {
         display: flex;
-        gap: 20px;
-     }
+        gap: 25px;
 
-     .navbar-item:not(:last-child){
+    }
+
+    .navbar-item:not(:last-child) {
         border-bottom: none;
-     }
+    }
 
-     .navbar-link{
+    .navbar-link {
         color: var(--color);
-     }
+    }
 
-     /* HERO */
-     .hero{
+    /* HERO */
+    .hero {
         min-height: 700px;
-     }
+    }
 
 
-     /* about section */
+    /* about section */
 
-     .about .container{
+    .about .container {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 30px;
-     }
+    }
 
-     .call-prayer-list{
+    .call-prayer-list {
         grid-template-columns: repeat(3, 1fr);
-     }
+    }
 
-     .goals-list{
+    .goals-list {
         grid-template-columns: 1fr;
-     }
+    }
 
-     .goals .container{
+    .goals .container {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;
-     }
+    }
 
-     .goals .section-title{
+    .goals .section-title {
         grid-column: 1 / 4;
-     }
+    }
 
-     .goals-banner{
+    .goals-banner {
         margin-block: 0;
         display: grid;
         place-items: center;
-     }
+    }
 
 
-     /* footer */
+    /* footer */
 
-     .footer-top .container{
+    .footer-top .container {
         grid-template-columns: repeat(4, 1fr);
-     }
-     
+    }
+
+    .footer-brand{
+        grid-column: 1 / 5;
+    }
+
+    .footer-brand .text{
+        max-width: 45ch;
+    }
+
+}
+
+
+
+/* responsiveness for larger than 1200px screen 
+    responsiveness for the last screen
+*/
+
+@media (min-width: 1200px) {
+
+    /* RE USED STYLES  */
+
+    .container{
+        max-width: 1200px;
+    }
+
+    .section-title{
+        --fs-3: 4.6rem;
+    }
+
+
+    /* HERO section */
+
+    .hero{
+        min-height: 800px;
+    }
+
+
+    /* THE BLOG SECTION */
+
+    .blog-list{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .blog-card{
+        height: 100%;
+    }
+
+    .blog-card .content{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+
+    /* THE FOOTER SECTION */
+
+
+    .footer-top .container{
+        grid-template-columns: 1fr 0.5fr 0.7fr 0.5fr 1fr;
+    }
+
+    .footer-brand{
+        grid-column: auto;
+    }
+
+
+
 }
