writing code for upcoming events

--- a/css/styles.css
+++ b/css/styles.css
@@ -661,6 +661,9 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
 
 /* Styling of the goals section ends */
 
+
+
+/* Styling the donation bar starts */
 .donation-bar,
 .donation-percentage {
     height: 5px;
@@ -696,15 +699,147 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
 }
 
 
-/* Styling the donation bar starts */
+/* Styling the donation bar ends */
+
+
+
+
+/* Styling the upcomingEvenets section starts */
+
+
+.upcomingEvents{
+
+}
+
+.eventsCenter .dateEvent{
+    display: inline-flex;
+    position: left;
+    background: var(--chrome-yellow);
+    width: 80px;
+    padding: 15px;
+    border-radius: 20%;
+    margin-top: 20px;
+    margin-left: 390px;
+}
+
+.eventsCenter .dateEvent h2{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: var(--fw-700);
+}
+
+
+.eventsCenter{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color: var(--white);
+}
+
+.eventsCenter .event1 i{
+    color: var(--chrome-yellow);
+}
+
+.eventsCenter .event1{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/blog-1.jpg");
+    height: 450px;
+    width: 85%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 5%;
+    cursor: pointer;
+}
+
+.eventsCenter .event1 .eventTalk{
+    margin-left: 45px;
+}
+
+.eventsCenter .event1 .h3{
+    margin-top: 60px;
+    
+    font-weight: var(--fw-500);
+}
+
+.eventsCenter .event1 h5{
+    margin-top: 14px;
+    
+}
+
+.eventsCenter .event1 p{
+    margin-top: 18px;
+    font-size: 13px;
+    font-weight: 400;
+    width: 90%;
+}
+
+.eventsCenter .event1 a{
+    margin-top: 21px;
+}
+
+
+.eventsCenter .event2{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/blog-4.jpg");
+    height: 450px;
+    width: 85%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 5%;
+    cursor: pointer;
+}
+
+
+.eventsCenter .dateEvent2{
+    display: inline-flex;
+    position: left;
+    background: var(--chrome-yellow);
+    width: 80px;
+    padding: 15px;
+    border-radius: 20%;
+    margin-top: 20px;
+    margin-left: 390px;
+}
+
+.eventsCenter .dateEvent2 h2{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: var(--fw-700);
+}
+
+
+.eventsCenter .event2 i{
+    color: var(--chrome-yellow);
+}
+
+.eventsCenter .event2 .eventTalk2{
+    margin-left: 45px;
+}
+
+.eventsCenter .event2 .h3{
+    margin-top: 60px;
+    
+    font-weight: var(--fw-500);
+}
+
+.eventsCenter .event2 h5{
+    margin-top: 14px;
+    
+}
+
+.eventsCenter .event2 p{
+    margin-top: 18px;
+    font-size: 13px;
+    font-weight: 400;
+    width: 90%;
+}
+
+.eventsCenter .event2 a{
+    margin-top: 21px;
+}
 
 
 
 
 
+/* Styling the upcomingEvenets section ends */
 
 
-/* Styling the donation bar starts */
 
 
 
@@ -1369,6 +1504,10 @@ come up and not stay down as it was before */
         grid-column: auto;
     }
 
+
+    .percent{
+        text-align: center;
+    }
 
 
 }
